[package]
name = "artillery-only"
version = "0.1.0"
authors = ["Marcel Guzik <mguzik555@gmail.com>", "JJendryka <jendryka.j@gmail.com>"]
edition='2018'

[lib]
name = "artillery_only"

[dependencies]
enet = "0.2.0"
serde = "1.0.80"
bit-vec = "0.5.0"
pistoncore-glutin_window = "0.51.1"
piston2d-opengl_graphics = "0.57.0"
piston = "0.39.0"
piston2d-graphics = "0.28.0"
